getting things working

--- a/packages/imon/client/settings.html
+++ b/packages/imon/client/settings.html
@@ -3,7 +3,7 @@
   <label for="country-select">Country</label>
   <select class="country form-control" id="country-select" name="country">
   {{# each countries }}
-  <option value="{{ code }}" {{ ..isSelected code }}>{{ name }}</option>
+  <option value="{{ code }}" {{ isSelected code ../country.code }}>{{ name }}</option>
   {{/each}}
 </select>
 </div>
@@ -11,8 +11,8 @@
 <div class="form-group">
   <label for="i-select">Indicator</label>
   <select class="indicator form-control" id="i-select" name="indicator">
-  {{# each indicators }}
-    <option value="{{ name }}" {{ selected }}>{{ name }}</option>
+  {{# each indicators country.code }}
+    <option value="{{ name }}" {{ isSelected name ../indicator.name }}>{{ name }}</option>
   {{/each}}
   </select>
 </div>
