--- a/packages/akamaiattacks/client/settings.html
+++ b/packages/akamaiattacks/client/settings.html
@@ -1,4 +1,4 @@
-<template name="AkamaiTraffic2Settings">
+<template name="AkamaiAttacksSettings">
 <div class="form-group">
 </div>
 <button class="btn btn-primary">Save</button>
