--- a/packages/akamaiattacks/client/widget.html
+++ b/packages/akamaiattacks/client/widget.html
@@ -1,6 +1,6 @@
-<template name="AkamaiTraffic2Widget">
-  <h1>Akamai Traffic</h1>
-  <ul class="akamai-traffic list-unstyled"></ul>
+<template name="AkamaiAttacksWidget">
+  <h1>Akamai Attacks</h1>
+  <ul class="akamai-attacks list-unstyled"></ul>
   {{# if Template.subscriptionsReady }}
   <p>{{ updatedAt }}</p>
   {{/if}}
