--- a/packages/imon/client/settings.html
+++ b/packages/imon/client/settings.html
@@ -20,6 +20,6 @@
 
 <button class="btn btn-primary save-settings">Save</button>
 {{ else }}
-  <p>Loading...</p>
+{{ widgetLoading }}
 {{/if}}
 </template>
