--- a/packages/broadband-cost/client/widget.html
+++ b/packages/broadband-cost/client/widget.html
@@ -1,19 +1,27 @@
 <template name="BroadbandCostWidget">
 {{# if Template.subscriptionsReady }}
 <h1>{{ country.name }}</h1>
-<dl>
-  <dd>{{ indicator.name }}</dd>
-  <dt>
-    <div class='progress'>
-      <div class='progress-bar' role='progressbar'
-        aria-valuenow='{{ indicatorPercent }}' aria-valuemin='0'
-        aria-valuemax='100' style='width: {{ indicatorPercent }}%;'>
-        <span class='sr-only'>{{ indicatorPercent }}</span>
-      </div>
-    </div>
-  </dt>
-</dl>
-<span class="indicator-value">{{ indicatorValue }}</span>
+<table class="cost-indicators table table-condensed">
+  <caption>
+    Broadband subscription charge as a percentage of GDP per capita PPP
+  </caption>
+  <tbody>
+    <tr>
+    {{# each indicators }}
+    <td class="{{ cellColor }}">
+      {{# if value }}{{ value }}{{ else }}&ndash;{{/if}}
+    </td>
+    {{/each}}
+    </tr>
+  </tbody>
+  <tfoot>
+    <tr>
+    {{# each indicators }}
+    <th>{{ speed }}</th>
+    {{/each}}
+    </tr>
+  </tfoot>
+</table>
 {{ else }}
   {{ widgetLoading }}
 {{/if}}
