--- a/packages/wikiedits/client/settings.html
+++ b/packages/wikiedits/client/settings.html
@@ -1,11 +1,21 @@
 <template name="WikiEditsSettings">
+{{# if Template.subscriptionsReady }}
 <div class="form-group">
-  <label for="wiki-language">Language</label>
+  <label for="wiki-language">Wiki</label>
   <select id="wiki-language" name="wiki-language">
     {{#each wikis }}
-    <option value="{{ channel }}">{{ name }}</option>
+    <option value="{{ channel }}">{{ wikiName }}</option>
     {{/each}}
   </select>
 </div>
-<button class="btn btn-primary">Save</button>
+
+<div class="form-group">
+  <label for="wiki-history">History Length</label>
+  <input type="number" id="wiki-history" name="wiki-history" value={{ historyLength }}/>
+</div>
+
+<button class="btn btn-primary save-settings">Save</button>
+{{ else }}
+  {{ widgetLoading }}
+{{/if}}
 </template>
