--- a/packages/wikiedits/client/widget.html
+++ b/packages/wikiedits/client/widget.html
@@ -1,5 +1,6 @@
 <template name="WikiEditsWidget">
-  <h1>Wikipedia - {{ channel }}</h1>
+  <h1>Wikipedia Edits</h1>
+  <div>Edits per second to {{ channel.name }} wiki</div>
   <div class="wiki-history epoch"></div>
   <div class="wiki-history-count"></div>
 </template>
