--- a/packages/wikiedits/client/widget.html
+++ b/packages/wikiedits/client/widget.html
@@ -1,4 +1,4 @@
-<template name="WikiEditsWidget">
+<template name="WikiEditCountsWidget">
   <h1>Wikipedia Edits</h1>
   <p>Edits in the last {{ historyLength }} seconds to {{ channel.name }} wiki</p>
   <div class="wiki-history epoch"></div>
