--- a/packages/wikiedit-stream/client/widget.html
+++ b/packages/wikiedit-stream/client/widget.html
@@ -1,5 +1,6 @@
 <template name="WikiStreamWidget">
   <h1>Wikipedia Edits</h1>
+  <h2>{{ channel.name }} Wikipedia</h2>
   <ul class="wikiedits list-unstyled">
   </ul>
 </template>
