make it look nicer

--- a/packages/herdict/client/widget.html
+++ b/packages/herdict/client/widget.html
@@ -12,8 +12,8 @@
       <span class="text-success herdict-accessible"
         title="Accessible Reports">{{ stats.accessible }}</span>
     </div>
-    <span class="herdict-domain">{{ domain }}</span>
-    <div class="herdict-title">{{ title }}</div>
+    <span class="herdict-domain text-primary">{{ domain }}</span>
+    <div class="herdict-title" title="{{ title }}">{{ title }}</div>
   </li>
   {{/each}}
 </ol>
