fixing up wikidata

--- a/packages/wikiedits/client/settings.html
+++ b/packages/wikiedits/client/settings.html
@@ -12,7 +12,7 @@
 <div class="form-group">
   <label for="wiki-history">History Length</label>
   <input class="form-control" type="number" id="wiki-history"
-    name="wiki-history" value="{{ historyLength }}" />
+    name="wiki-history" value="{{ binWidth }}" />
 </div>
 
 <button class="btn btn-primary save-settings">Save</button>
