--- a/packages/wikiedits/client/widget.html
+++ b/packages/wikiedits/client/widget.html
@@ -1,6 +1,6 @@
 <template name="WikiEditCountsWidget">
   <h1>Wikipedia Edits</h1>
-  <p>Edits in the last {{ historyLength }} seconds to {{ channel.name }} Wikipedia</p>
+  <p>Edits in the last {{ binWidth }} seconds to {{ channel.name }} Wikipedia</p>
   <div class="wiki-history epoch"></div>
   <div class="wiki-history-count"></div>
 </template>
