--- a/packages/akamaiattacks/client/widget.html
+++ b/packages/akamaiattacks/client/widget.html
@@ -1,7 +1,4 @@
 <template name="AkamaiAttacksWidget">
-  <h1>Akamai Attacks</h1>
-  <ul class="akamai-attacks list-unstyled"></ul>
-  {{# if Template.subscriptionsReady }}
-  <p>{{ updatedAt }}</p>
-  {{/if}}
+<h1>Akamai Attacks</h1>
+<div class="akamai-attacks world-map"></div>
 </template>
