akamai attacks language

--- a/packages/akamaiattacks/client/widget.html
+++ b/packages/akamaiattacks/client/widget.html
@@ -1,4 +1,5 @@
 <template name="AkamaiAttacksWidget">
-<h1>Akamai Attacks</h1>
+<h1>Network Attacks</h1>
+<p>Percent over average of inbound network attacks</p>
 <div class="akamai-attacks world-map"></div>
 </template>
