change widget package format

--- a/packages/akamaitraffic/client/widget.html
+++ b/packages/akamaitraffic/client/widget.html
@@ -1,5 +1,5 @@
 <template name="AkamaiTrafficWidget">
-  <h1>Akamai Traffic</h1>
+  <h1>HTTP Requests</h1>
   <h2>{{ regionLabel }}</h2>
   <div class="akamai-traffic-day epoch">
     <h3>Last 24 hours</h3>
