--- a/packages/connection-speed/client/widget.html
+++ b/packages/connection-speed/client/widget.html
@@ -1,7 +1,7 @@
 <template name="ConnectionSpeedWidget">
 {{# if Template.subscriptionsReady }}
-<h1>{{ country.name }}</h1>
-<div>{{ indicatorName }}</div>
+<h1>Connection Speed</h1>
+<h2>{{ country.name }}</h2>
 {{ else }}
   {{ widgetLoading }}
 {{/if}}
