--- a/packages/kaspersky/client/widget.html
+++ b/packages/kaspersky/client/widget.html
@@ -1,6 +1,6 @@
 <template name="KasperskyWidget">
-<h1>{{ country.name }}</h1>
-<p>Kaspersky data for the last 24 hours</p>
+<h1>Threat Data</h1>
+<h2>{{ country.name }} <small>&mdash; last 24 hours</small></h2>
 <div class="epoch net-attacks"></div>
 <div class="epoch local-infections"></div>
 <div class="epoch vulns"></div>
