--- a/packages/lumen/client/widget.html
+++ b/packages/lumen/client/widget.html
@@ -1,5 +1,5 @@
 <template name="LumenWidget">
-<h1>Lumen</h1>
-<h2>Reported URLs per {{ binWidth }}</h2>
+<h1>Takedown Requests</h1>
+<h2>URLs per {{ binWidth }}</h2>
 <div class="url-counts epoch"></div>
 </template>
