--- a/packages/mediacloud/client/widget.html
+++ b/packages/mediacloud/client/widget.html
@@ -1,6 +1,7 @@
 <template name="MediaCloudWidget">
+<h1>News Topics</h1>
 {{# if Template.subscriptionsReady }}
-<h1>{{ country.name }}</h1>
+<h2>{{ country.name }}</h2>
 {{ else }}
   {{ widgetLoading }}
 {{/if}}
