--- a/packages/percent-online/client/widget.html
+++ b/packages/percent-online/client/widget.html
@@ -1,7 +1,7 @@
 <template name="PercentOnlineWidget">
 {{# if Template.subscriptionsReady }}
-<h1>{{ country.name }}</h1>
-<p>{{ indicatorName }}</p>
+<h1>Percent Online</h1>
+<h2>{{ country.name }}</h2>
 <span class="indicator-value">{{ indicatorValue }}</span>
 <div class="online-users">
 {{# each users }}
