--- a/packages/herdict/client/widget.html
+++ b/packages/herdict/client/widget.html
@@ -1,7 +1,9 @@
 <template name="HerdictWidget">
+<h1>Site Accessibility</h1>
 {{# if Template.subscriptionsReady }}
-<h1>{{ country.name }}</h1>
-<h2>{{ category.name }}</h2>
+<h2>{{ country.name }}
+<small>&mdash; {{ category.name }}</small>
+</h2>
 <ol>
   {{# each sites }}
   <li>
