clean up bytes delivered

--- a/packages/akamaiattacks/client/widget.html
+++ b/packages/akamaiattacks/client/widget.html
@@ -1,5 +1,5 @@
 <template name="AkamaiAttacksWidget">
 <h1>Network Attacks</h1>
-<p>Percent over average of inbound network attacks</p>
+<p>Inbound network attacks, percent above average</p>
 <div class="akamai-attacks world-map"></div>
 </template>
