--- a/packages/akamaitraffic2/client/widget.html
+++ b/packages/akamaitraffic2/client/widget.html
@@ -1,7 +1,5 @@
 <template name="AkamaiTraffic2Widget">
-  <h1>Akamai Traffic</h1>
-  <ul class="akamai-traffic list-unstyled"></ul>
-  {{# if Template.subscriptionsReady }}
-  <p>{{ updatedAt }}</p>
-  {{/if}}
+  <h1>Bytes Delivered</h1>
+  <p>Percent above average</p>
+  <div class="bytes-delivered world-map"></div>
 </template>
