--- a/packages/kaspersky/client/widget.html
+++ b/packages/kaspersky/client/widget.html
@@ -6,4 +6,7 @@
 <div class="epoch vulns"></div>
 <div class="epoch web-threats"></div>
 <div class="epoch spam"></div>
+{{# unless Template.subscriptionsReady }}
+  {{ widgetLoading }}
+{{/unless}}
 </template>
