--- a/packages/herdict/client/widget.html
+++ b/packages/herdict/client/widget.html
@@ -1,5 +1,5 @@
 <template name="HerdictWidget">
-<h1>Site Accessibility</h1>
+<h1>Site Availability</h1>
 {{# if Template.subscriptionsReady }}
 <h2>{{ country.name }}
 <small>&mdash; {{ category.name }}</small>
