--- a/packages/netclerk/client/widget.html
+++ b/packages/netclerk/client/widget.html
@@ -4,7 +4,7 @@
 
   <ul>
     {{# each statuses }}
-    <li class="{{#if isUp delta}}up{{else}}down{{/if}}">{{ country.iso3 }} {{ page.url }}</li>
+    <li class="{{#if isUp delta}}up{{else}}down{{/if}}">{{ pageDisplay page }} {{ country.iso3 }} <span class="value">{{ valueDisplay value }}</span> <span class="delta">{{ deltaDisplay delta }}</span></li>
     {{/each}}
   </ul>
 
