flip chill axis

--- a/packages/lumen/client/widget.html
+++ b/packages/lumen/client/widget.html
@@ -4,5 +4,5 @@
 {{# unless Template.subscriptionsReady }}
   {{ widgetLoading }}
 {{/unless}}
-<div class="url-counts epoch"></div>
+<div class="url-counts"></div>
 </template>
