--- a/packages/widget/client/widget.html
+++ b/packages/widget/client/widget.html
@@ -4,42 +4,48 @@
       data-sizex="{{ width }}" data-sizey="{{ height }}"
       data-row="{{ position.x }}" data-col="{{ position.y }}">
 
-    <div class="buttons">
-      {{# if providesSettings }}
-      <a class="settings" href="#" id="{{ widgetId 'settings' }}"
-        title="Settings" data-toggle="popover" data-trigger="click"
-        data-html="true" data-placement="auto right" data-container="body">
-        <span class="glyphicon glyphicon-cog"></span>
-      </a>
-      <div class="hidden for-{{ widgetId 'settings' }}">
-        {{> Template.dynamic template=settingsTemplate data=data }}
-      </div>
-      {{/if}} 
+    <div class="title-bar">
+      <p class="data-source">
+        From <a href="{{ widgetMetadata.org.url }}" target="_blank">
+          {{ widgetMetadata.org.shortName }}
+        </a>
+      </p>
 
-      <a class="about" href="#" id="{{ widgetId 'about' }}"
-        title="About" data-toggle="popover" data-trigger="click"
-        data-html="true" data-placement="auto right" data-container="body">
-        <span class="glyphicon glyphicon-info-sign"></span>
-      </a>
-      <div class="hidden for-{{ widgetId 'about' }}">
-      {{# if providesInfo }}
-        {{> Template.dynamic template=infoTemplate data=data }}
-      {{else}}
-        {{> DefaultWidgetInfo }}
-      {{/if}}
-      </div>
+      <div class="buttons">
+        <a href="#" class="remove-widget" title="Remove widget">
+          <span class="glyphicon glyphicon-remove"></span>
+        </a>
 
-      <a href="#" class="remove-widget" title="Remove widget">
-        <span class="glyphicon glyphicon-remove"></span>
-      </a>
+        <a class="about" href="#" id="{{ widgetId 'about' }}"
+          title="About" data-toggle="popover" data-trigger="click"
+          data-html="true" data-placement="auto right" data-container="body">
+          <span class="glyphicon glyphicon-info-sign"></span>
+        </a>
+        <div class="hidden for-{{ widgetId 'about' }}">
+        {{# if providesInfo }}
+          {{> Template.dynamic template=infoTemplate data=data }}
+        {{else}}
+          {{> DefaultWidgetInfo }}
+        {{/if}}
+        </div>
+
+        {{# if providesSettings }}
+        <a class="settings" href="#" id="{{ widgetId 'settings' }}"
+          title="Settings" data-toggle="popover" data-trigger="click"
+          data-html="true" data-placement="auto right" data-container="body">
+          <span class="glyphicon glyphicon-cog"></span>
+        </a>
+        <div class="hidden for-{{ widgetId 'settings' }}">
+          {{> Template.dynamic template=settingsTemplate data=data }}
+        </div>
+        {{/if}}
+      </div>
     </div>
 
-    {{> Template.dynamic template=widgetTemplate data=data }}
-    <p class="widget-data-source">
-      Source: <a href="{{ widgetMetadata.org.url }}" target="_blank">
-        {{ widgetMetadata.org.shortName }}
-      </a>
-    </p>
+    <div class="widget-body">
+      {{> Template.dynamic template=widgetTemplate data=data }}
+    </div>
+
   </li>
 </template>
 
