--- a/packages/widget/client/widget.html
+++ b/packages/widget/client/widget.html
@@ -5,11 +5,13 @@
       data-row="{{ position.x }}" data-col="{{ position.y }}">
 
     <div class="title-bar">
+      {{# if fromOrg }}
       <p class="data-source">
         From <a href="{{ widgetMetadata.org.url }}" target="_blank">
           {{ widgetMetadata.org.shortName }}
         </a>
       </p>
+      {{/if}}
 
       <div class="buttons">
         <a href="#" class="remove-widget" title="Remove widget">
@@ -50,6 +52,7 @@
 </template>
 
 <template name="DefaultWidgetInfo">
+{{# if fromOrg }}
 <p>
   The data backing this widget has been provided by:
 </p>
@@ -58,6 +61,8 @@
   {{ widgetMetadata.org.name }}</a>
 </div>
 <hr />
+{{/if}}
+
 <p>
   Click <a href="{{ widgetMetadata.widget.url }}" target="_blank">here</a> for
   more information about this data.
