make rendering look less terrible - #12425

--- a/packages/widget/client/widget.html
+++ b/packages/widget/client/widget.html
@@ -1,5 +1,5 @@
 <template name="WidgetShow">
-  <li id="{{ widgetId }}" class="widget {{ widgetClass }}"
+  <li id="{{ widgetId }}" class="widget {{ widgetClass }}" style="display: none"
       data-mid="{{ _id }}" {{ gridAttrs }}>
 
     <div class="title-bar" style="height: {{ titleBar.height }}px;">
