add user content widget - #12431

--- a/packages/widget/client/widget.html
+++ b/packages/widget/client/widget.html
@@ -18,7 +18,7 @@
 
         <a class="button-info" href="#" id="{{ componentId 'Info' }}"
           title="About" data-toggle="popover" data-trigger="click"
-          data-html="true" data-placement="auto right" data-viewport="#widgets"
+          data-html="true" data-placement="auto right" data-viewport="#dashboard"
           data-container="#{{componentId 'widget' }}">
           <span class="glyphicon glyphicon-info-sign"></span>
         </a>
