move popover out of widgets - #12452

--- a/packages/widget/client/widget.html
+++ b/packages/widget/client/widget.html
@@ -19,7 +19,7 @@
         <a class="button-info" href="#" id="{{ componentId 'Info' }}"
           title="About" data-toggle="popover" data-trigger="click"
           data-html="true" data-placement="auto right" data-viewport="#dashboard"
-          data-container="#{{componentId 'widget' }}">
+          data-container="body">
           <span class="glyphicon glyphicon-info-sign"></span>
         </a>
         <div class="widget-info for-{{ componentId 'info' }}">
@@ -29,8 +29,8 @@
         {{# if providesSettings }}
         <a class="button-settings" href="#" id="{{ componentId 'Settings' }}"
           title="Settings" data-toggle="popover" data-trigger="click"
-          data-html="true" data-placement="auto right" data-viewport="#widgets"
-          data-container="#{{componentId 'widget'}}">
+          data-html="true" data-placement="auto right" data-viewport="#dashboard"
+          data-container="body">
           <span class="glyphicon glyphicon-cog"></span>
         </a>
 
