--- a/packages/wikivolume/client/settings.html
+++ b/packages/wikivolume/client/settings.html
@@ -1,4 +1,4 @@
-<template name="WikiStreamSettings">
+<template name="WikiEditCountsSettings">
 {{# if Template.subscriptionsReady }}
 <div class="form-group">
   <label for="wiki-language">Wiki</label>
@@ -7,6 +7,12 @@
     <option value="{{ channel }}" {{ selected ../channel }}>{{ wikiName }}</option>
     {{/each}}
   </select>
+</div>
+
+<div class="form-group">
+  <label for="wiki-history">History Length</label>
+  <input class="form-control" type="number" id="wiki-history"
+    name="wiki-history" value="{{ binWidth }}" />
 </div>
 
 <button class="btn btn-primary save-settings">Save</button>
