change lumen to notice counts - #12176, #12398

--- a/packages/lumen/client/widget.html
+++ b/packages/lumen/client/widget.html
@@ -1,6 +1,6 @@
 <template name="LumenWidget">
 <h1>Takedown Requests</h1>
-<h2>URLs per {{ binWidth }}</h2>
+<h2>Notices per {{ binWidth }}</h2>
 {{# unless Template.subscriptionsReady }}
   {{ widgetLoading }}
 {{/unless}}
