lots more bugfixes

--- a/packages/broadband-cost/client/widget.html
+++ b/packages/broadband-cost/client/widget.html
@@ -1,5 +1,5 @@
 <template name="BroadbandCostWidget">
-{{# if Template.subscriptionsReady }}
+{{# if ready }}
 <h1>Broadband Cost</h1>
 <h2>{{ country.name }}</h2>
 <table class="cost-indicators table table-condensed">
