--- a/packages/connection-speed/client/widget.html
+++ b/packages/connection-speed/client/widget.html
@@ -1,5 +1,5 @@
 <template name="ConnectionSpeedWidget">
-{{# if Template.subscriptionsReady }}
+{{# if ready }}
 <h1>Connection Speed</h1>
 <h2>{{ country.name }}</h2>
 {{ else }}
