--- a/packages/percent-online/client/widget.html
+++ b/packages/percent-online/client/widget.html
@@ -1,5 +1,5 @@
 <template name="PercentOnlineWidget">
-{{# if Template.subscriptionsReady }}
+{{# if ready }}
   <h1>Percent Online</h1>
   <h2>{{ country.name }}</h2>
   <span class="indicator-value">{{ indicatorValue }}</span>
