--- a/packages/widget/client/info.html
+++ b/packages/widget/client/info.html
@@ -1,13 +1,15 @@
 <template name="WidgetInfo">
-  {{# if providesInfo }}
-    {{> Template.dynamic template=infoTemplate data=data }}
-  {{else}}
-    {{> DefaultWidgetInfo data }}
-  {{/if}}
+  <div class="widget-info for-{{ componentId 'info' }}">
+    {{# if providesInfo }}
+      {{> Template.dynamic template=infoTemplate data=data }}
+    {{else}}
+      {{> DefaultWidgetInfo data }}
+    {{/if}}
 
-  <button type="button" class="close close-info" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
+    <button type="button" class="close close-info" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 </template>
 
 <template name="DefaultWidgetInfo">
